@@ -4,6 +4,8 @@ date Version 3.00.46 (Beta 3)
 + Added "column_sizes" and "row_sizes" properties to wxGrid.
   Resizing the columns/rows by dragging is the easiest way to use these.
 ^ Reorganized wxGrid properties.
+* Fixed FS#199 - "tooltips lost on XRC import"
+* Fixed import of "enabled", "hidden", and "subclass" properties.
 
 06/13/2007 Version 3.00.45 (Beta 3)
 * Fixed FS#198 - "Wrong place of the ID in a wxHyperlinkCtrl."
